index.css
html, body {
    margin: 0;
    padding: 0;
    font-family: 'Source Sans Pro', sans-serif;
    background-color: #EDEDED;
}

h3, p {
    margin: 0;
}

.heading-section,
.person {
    background-color: #ffff;
}

.person {
    margin-bottom: 48px;
}

.heading-section {
    display: flex;
    justify-content: space-between;
    padding-bottom: 20px;
    border-bottom: 2px solid #d1d5db;
}

.profile-pic {
    margin: auto 10;
    display: inline-block;
    width: 100px;
    height: 100px;
    border-radius: 50%;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
}

.person {
    display: flex;
    flex-direction: column;
}

.profile-header {
    display: flex;
    padding: 18px;
    margin-top: 18px;
}

.profile-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.post-pic {
    margin: 18px 0 32px 0;
}

.button-icons {
    display: flex;
    gap: 42px;
    height: 60px;
}

.button-icons, 
.feed-interactions,
.profile-header {
    padding-left: 24px;
}

.feed-interactions {
    display: flex;
    flex-direction: column;
    gap: 16px;
    margin: 24px 0;
}

.user-comments {
    font-weight: normal;
}

